--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mdi/js": "^6.5.95",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@reduxjs/toolkit": "^1.7.1",
@@ -14,9 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-calendar": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
